# sigrokdecode-decoder-msif

./: README.md  pyproject.toml
src/msclassic/: __init__.py  pd.py
src/msif/: __init__.py  pd.py  stacked.py
src/mspro/: __init__.py  pd.py
