[project]
name = "msif"
version = "0.1.0"
description = ""
authors = [
    {name = "dogtopus",email = "dogtopus@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typedsigrokdecode @ git+https://github.com/dogtopus/typedsigrokdecode.git"
]

[tool.poetry]
packages = [{include = "msif", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
